--- a/Styles/style.css
+++ b/Styles/style.css
@@ -6,7 +6,7 @@ body {
     margin: 0px;
     margin-top: auto;
 }
-/* headar frist section css */
+/* headar section css */
 .hd-top{
     background-color: #f1dce0;
     display: flex;
@@ -54,7 +54,6 @@ p{
  .text-centar{
     padding-bottom: 40px;
     text-align: center;
-
     margin: auto;
     
  }
@@ -88,5 +87,28 @@ img{
     justify-content:space-between ;
     padding-left: 220px;
     padding-right: 220px;
-    
+}
+.main-bg-color{
+    background-color:  #f3eced;
+   height: 500px
+}
+
+.text-padding{
+    font-size: 28px;
+    padding-right: 440px;
+}
+.right-text-padding{
+    padding-left: 250px;
+}
+.btn-scend{
+    padding-left: 400px;
+}
+.img-right{
+    display: flex;
+    margin-left: 800px;
+    margin-top: -300px;
+}
+
+.color{
+    color: #E55473;
 }
